Finalized the OPD appointment module, including payment and slip generation.

--- a/10.2.0/angular/src/app/deposit/deposit.component.html
+++ b/10.2.0/angular/src/app/deposit/deposit.component.html
@@ -62,7 +62,7 @@
                                     </td>
                                     <td>
                                         <span>
-                                            {{ record.paymentMethod }}
+                                            {{ getPaymentMethodLabel(record.paymentMethod) }}
                                         </span>
                                     </td>
                                     <td>
