--- a/10.2.0/angular/src/app/doctors/lab-orders/lab-orders.component.html
+++ b/10.2.0/angular/src/app/doctors/lab-orders/lab-orders.component.html
@@ -146,8 +146,11 @@
                                         </span>
                                     </td>
                                     <td>
-                                        <p-chip [label]="getStatusLabel(record.testStatus)"
-                                            [class]="getStatusClass(record.testStatus)" />
+                                        <p-tag 
+                                          [value]="getStatusLabel(record.testStatus)" 
+                                          [severity]="getStatusSeverity(record.testStatus)" 
+                                          [rounded]="true">
+                                        </p-tag>
                                     </td>
                                     <td>
                                         <button type="button" pButton icon="pi pi-eye" class="p-button-text"
