--- a/10.2.0/angular/src/app/nurse/appointments/appointments.component.html
+++ b/10.2.0/angular/src/app/nurse/appointments/appointments.component.html
@@ -94,10 +94,16 @@
                                         <p-sortIcon field="doctorName"></p-sortIcon>
                                     </th>
                                     <th style="min-width: 150px">
+                                        Appointment Type
+                                    </th>
+                                    <th style="min-width: 150px">
                                         Date & Time
                                     </th>
                                     <th style="min-width: 130px">
                                         Status
+                                    </th>
+                                    <th style="min-width: 100px">
+                                        Payment Status
                                     </th>
                                     <th style="min-width: 130px">
                                         Actions
@@ -118,6 +124,11 @@
                                         </span>
                                     </td>
                                     <td>
+                                        <span>
+                                            {{ record.appointmentType.name }}
+                                        </span>
+                                    </td>
+                                    <td>
                                         <p class="m-0">
                                             {{ record.appointmentDate | date: 'dd/MM/yyyy' }}
                                         </p>
@@ -126,9 +137,24 @@
                                         </p>
                                     </td>
                                     <td>
-                                        <p-chip [label]="getStatusLabel(record.status)"
-                                            [class]="getStatusClass(record.status)" />
-                                    </td>
+                                        <p-tag 
+                                          [value]="getStatusLabel(record.status)" 
+                                          [severity]="getStatusSeverity(record.status)" [rounded]="true">
+                                        </p-tag>
+                                      </td>
+                                      
+                                      <td>
+                                        <p-tag 
+                                          *ngIf="record.isPaid; else unpaidTag" 
+                                          value="Paid" 
+                                          severity="success" [rounded]="true">
+                                        </p-tag>
+                                        <ng-template #unpaidTag>
+                                          <p-tag value="Unpaid" severity="danger" [rounded]="true"></p-tag>
+                                        </ng-template>
+                                      </td>
+                                      
+                                      
                                     <td  *ngIf="record.status !== 3">
                                         <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
                                             (click)="rowMenu.toggle($event); selectedRecord = record">
@@ -137,6 +163,12 @@
                                             <ul class="custom-overlay-menu">
                                                 <li (click)="editAppoinment(selectedRecord)">
                                                     <i class="pi pi-pencil"></i> Edit
+                                                </li>
+                                                <li (click)="viewReceipt(selectedRecord)">
+                                                    <i class="pi pi-file"></i> View Receipt
+                                                </li>
+                                                <li *ngIf="!record.isPaid" (click)="makePayment(record)">
+                                                    <i class="pi pi-credit-card"></i> Pay Now
                                                 </li>
                                                 <!-- <li (click)="delete(selectedRecord)">
                                                     <i class="pi pi-trash"></i> Delete
