--- a/10.2.0/angular/src/app/nurse/create-appoinment/create-appoinment.component.html
+++ b/10.2.0/angular/src/app/nurse/create-appoinment/create-appoinment.component.html
@@ -1,79 +1,94 @@
 <form class="form-horizontal" autocomplete="off" #createAppoinmentModal="ngForm" (ngSubmit)="save()">
-    <abp-modal-header title="Create New Appoinment" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
-    <div class="modal-body">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="d-flex justify-content-between align-items-center">
-                    <b>Select Patient</b>
-                    <p-button label="Add New Patient" variant="text" severity="info" *ngIf="showAddPatientButton"
-                        (onClick)="showCreatePatientDialog()" />
-                </div>
-                <p-select [options]="patients" optionLabel="fullName" placeholder="Select a patient"
-                    [optionValue]="'id'" [(ngModel)]="appointment.patientId" name="patientId" class="w-100" />
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-md-6 d-flex flex-column">
-                <label for="buttondisplay"> Select Doctor </label>
-                <p-select [(ngModel)]="appointment.doctorId" [optionValue]="'id'" name="doctorId" [options]="doctors"
-                    optionLabel="fullName" placeholder="Select doctor" class="w-100" required />
-            </div>
-            <div class="col-md-6 d-flex flex-column">
-                <label for="buttondisplay"> Select Nurse </label>
-                <p-select [(ngModel)]="appointment.nurseId" [optionValue]="'id'" name="nurseId" [options]="nurse"
-                    optionLabel="fullName" placeholder="Select nurse" class="w-100" />
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-md-12 d-flex flex-column">
-                <div>
-                    <label for="buttondisplay"> Status </label>
-                </div>
-                <div>
-                    <div class="row">
-                        <div class="col-md-9">
-                            <p-select [(ngModel)]="appointment.status" name="status" [options]="statusOptions"
-                                [optionValue]="'value'" optionLabel="label" placeholder="Appointment Status"
-                                class="w-100" required />
-                        </div>
-                        <div class="col-md-3">
-                            <p-checkbox [(ngModel)]="appointment.isFollowUp" name="isFollowUp" binary="true" />
-                            <span class="ml-2"><b>Is FollowUp</b></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-md-6 d-flex flex-column">
-                <label for="buttondisplay"> Appointment Date </label>
-                <p-datepicker [(ngModel)]="appointment.appointmentDate" name="appointmentDate" [showIcon]="true"
-                    placeholder="Select appointment date"  [minDate]="tomorrow" required />
-            </div>
-            <div class="col-md-6">
-                <div class="row">
-                    <div class="col-md-6 d-flex flex-column">
-                        <label for="buttondisplay"> Start Time </label>
-                        <p-datepicker [(ngModel)]="appointment.startTime" name="startTime" [timeOnly]="true"
-                            placeholder="Select start time" required />
-                    </div>
-                    <div class="col-md-6 d-flex flex-column">
-                        <label for="buttondisplay"> End Time </label>
-                        <p-datepicker [(ngModel)]="appointment.endTime" name="endTime" [timeOnly]="true"
-                            placeholder="Select end time" required />
-                    </div>
-                </div>
+  <abp-modal-header title="Create New Appointment" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
 
-            </div>
+  <div class="modal-body">
+    <!-- Patient Selection -->
+    <div class="row">
+      <div class="col-md-12">
+        <div class="d-flex justify-content-between align-items-center">
+          <b>Select Patient</b>
+          <p-button label="Add New Patient" variant="text" severity="info" *ngIf="showAddPatientButton"
+            (onClick)="showCreatePatientDialog()">
+          </p-button>
         </div>
-        <div class="row mt-3">
-            <div class="col-md-12 d-flex flex-column">
-                <label for="buttondisplay"> Reason </label>
-                <textarea pTextarea [(ngModel)]="appointment.reasonForVisit" name="reason" placeholder="Reason for visit"
-                    rows="3" class="w-100" required></textarea>
-            </div>
-        </div>
+        <p-select [options]="patients" optionLabel="fullName" [optionValue]="'id'" placeholder="Select a patient"
+          [(ngModel)]="appointment.patientId" (onChange)="onPatientChange($event.value)" name="patientId" class="w-100"
+          required>
+        </p-select>
+      </div>
     </div>
-    <abp-modal-footer [cancelDisabled]="saving" [saveDisabled]="!isFormValid || saving"
-        (onCancelClick)="bsModalRef.hide()"></abp-modal-footer>
+
+    <!-- Doctor & Appointment Type -->
+    <div class="row mt-3">
+      <div class="col-md-6 d-flex flex-column">
+        <label>Select Doctor</label>
+        <p-select [options]="doctors" optionLabel="fullName" [optionValue]="'id'" placeholder="Select doctor"
+          [(ngModel)]="appointment.doctorId" name="doctorId" class="w-100" required>
+        </p-select>
+      </div>
+      <div class="col-md-6 d-flex flex-column">
+        <label>Appointment Type</label>
+        <p-select [options]="appointmentTypes" optionLabel="name" [optionValue]="'id'" placeholder="Select type"
+          [(ngModel)]="appointment.appointmentTypeId" name="appointmentTypeId" class="w-100" required>
+        </p-select>
+      </div>
+    </div>
+
+    <!-- Status & Follow-Up -->
+    <div class="row mt-3">
+      <div class="col-md-6 d-flex flex-column">
+        <label>Status</label>
+        <p-select [options]="statusOptions" [optionValue]="'value'" optionLabel="label" placeholder="Appointment Status"
+          [(ngModel)]="appointment.status" name="status" class="w-100" required>
+        </p-select>
+      </div>
+
+      <div class="col-md-6 d-flex flex-column">
+        <label>Appointment Date</label>
+        <p-datepicker [(ngModel)]="appointment.appointmentDate" name="appointmentDate" [showIcon]="true"
+          placeholder="Select appointment date" [minDate]="today" required>
+        </p-datepicker>
+      </div>
+    </div>
+
+    <!-- Payment Method Toggle (only if NOT admitted) -->
+    <div class="row mt-3" *ngIf="!isPatientAdmitted">
+      <div class="col-md-12">
+        <label>Mode of Payment</label>
+        <div class="d-flex">
+          <div class="payment-option" [class.active]="appointment.paymentMethod === 1" (click)="togglePaymentMethod(1)">
+            Card
+          </div>
+          <div class="payment-option ml-2" [class.active]="appointment.paymentMethod === 0"
+            (click)="togglePaymentMethod(0)">
+            Cash
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Date -->
+    <div class="row mt-3">
+      <div class="col-md-12 d-flex align-items-center">
+        <p-checkbox [(ngModel)]="appointment.isFollowUp" name="isFollowUp" binary="true">
+        </p-checkbox>
+        <span class="ml-2"><b>Is FollowUp</b></span>
+      </div>
+    </div>
+
+    <!-- Reason -->
+    <div class="row mt-3">
+      <div class="col-md-12 d-flex flex-column">
+        <label>Reason</label>
+        <textarea pTextarea [(ngModel)]="appointment.reasonForVisit" name="reasonForVisit"
+          placeholder="Reason for visit" rows="3" class="w-100" required>
+        </textarea>
+      </div>
+    </div>
+  </div>
+
+  <abp-modal-footer [cancelDisabled]="saving" [saveDisabled]="!isFormValid || saving"
+    (onCancelClick)="bsModalRef.hide()">
+  </abp-modal-footer>
 </form>
