--- a/10.2.0/angular/src/app/nurse/edit-appoinment/edit-appoinment.component.html
+++ b/10.2.0/angular/src/app/nurse/edit-appoinment/edit-appoinment.component.html
@@ -1,75 +1,111 @@
 <form class="form-horizontal" autocomplete="off" #editAppoinmentForm="ngForm" (ngSubmit)="save()">
-    <abp-modal-header title="Edit Appoinment" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
-    <div class="modal-body">
-        <div class="row">
-            <div class="col-md-12">
-                <b>Select Patient</b>
-                <p-select [options]="patients" optionLabel="fullName" placeholder="Select a patient"
-                    [optionValue]="'id'" [(ngModel)]="appointment.patientId" name="patientId" class="w-100" />
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-md-6 d-flex flex-column">
-                <label for="buttondisplay"> Select Doctor </label>
-                <p-select [(ngModel)]="appointment.doctorId" [optionValue]="'id'" name="doctorId" [options]="doctors"
-                    optionLabel="fullName" placeholder="Select doctor" class="w-100" required />
-            </div>
-            <div class="col-md-6 d-flex flex-column">
-                <label for="buttondisplay"> Select Nurse </label>
-                <p-select [(ngModel)]="appointment.nurseId" [optionValue]="'id'" name="nurseId" [options]="nurse"
-                    optionLabel="fullName" placeholder="Select nurse" class="w-100" />
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-md-12 d-flex flex-column">
-                <div>
-                    <label for="buttondisplay"> Status </label>
-                </div>
-                <div>
-                    <div class="row">
-                        <div class="col-md-9">
-                            <p-select [(ngModel)]="appointment.status" name="status" [options]="statusOptions"
-                                [optionValue]="'value'" optionLabel="label" placeholder="Appointment Status"
-                                class="w-100" required />
-                        </div>
-                        <div class="col-md-3">
-                            <p-checkbox [(ngModel)]="appointment.isFollowUp" name="isFollowUp" binary="true" />
-                            <span class="ml-2"><b>Is FollowUp</b></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-md-6 d-flex flex-column">
-                <label for="buttondisplay"> Appointment Date </label>
-                <p-datepicker [(ngModel)]="appointment.appointmentDate" name="appointmentDate" [showIcon]="true"
-                    placeholder="Select appointment date" [minDate]="tomorrow" required />
-            </div>
-            <div class="col-md-6">
-                <div class="row">
-                    <div class="col-md-6 d-flex flex-column">
-                        <label for="buttondisplay"> Start Time </label>
-                        <p-datepicker [(ngModel)]="appointment.startTime" name="startTime" [timeOnly]="true"
-                            placeholder="Select start time" required />
-                    </div>
-                    <div class="col-md-6 d-flex flex-column">
-                        <label for="buttondisplay"> End Time </label>
-                        <p-datepicker [(ngModel)]="appointment.endTime" name="endTime" [timeOnly]="true"
-                            placeholder="Select end time" required />
-                    </div>
-                </div>
+  <abp-modal-header title="Edit Appointment" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
 
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-md-12 d-flex flex-column">
-                <label for="buttondisplay"> Reason </label>
-                <textarea pTextarea [(ngModel)]="appointment.reasonForVisit" name="reasonForVisit"
-                    placeholder="Reason for visit" rows="3" class="w-100" required></textarea>
-            </div>
-        </div>
+  <div class="modal-body">
+    <!-- Patient Selection -->
+    <div class="form-group mb-3">
+      <label>Select Patient</label>
+      <p-select 
+        [options]="patients" 
+        optionLabel="fullName" 
+        [optionValue]="'id'" 
+        placeholder="Select a patient"
+        [(ngModel)]="appointment.patientId" 
+        name="patientId" 
+        class="w-100" 
+        required>
+      </p-select>
     </div>
-    <abp-modal-footer [cancelDisabled]="saving" [saveDisabled]="isSaveDisabled()"
-        (onCancelClick)="bsModalRef.hide()"></abp-modal-footer>
+
+    <!-- Doctor & Appointment Type -->
+    <div class="row g-3 mb-3">
+      <div class="col-md-6">
+        <label>Select Doctor</label>
+        <p-select 
+          [options]="doctors" 
+          optionLabel="fullName" 
+          [optionValue]="'id'" 
+          placeholder="Select doctor"
+          [(ngModel)]="appointment.doctorId" 
+          name="doctorId" 
+          class="w-100" 
+          required>
+        </p-select>
+      </div>
+      <div class="col-md-6">
+        <label>Appointment Type</label>
+        <p-select 
+          [options]="appointmentTypes" 
+          optionLabel="name" 
+          [optionValue]="'id'" 
+          placeholder="Select type"
+          [(ngModel)]="appointment.appointmentTypeId" 
+          name="appointmentTypeId" 
+          class="w-100" 
+          required>
+        </p-select>
+      </div>
+    </div>
+
+    <!-- Status & Appointment Date -->
+    <div class="row g-3 mb-3">
+      <div class="col-md-6">
+        <label>Status</label>
+        <p-select 
+          [options]="statusOptions" 
+          optionLabel="label" 
+          [optionValue]="'value'" 
+          placeholder="Select status"
+          [(ngModel)]="appointment.status" 
+          name="status" 
+          class="w-100" 
+          required>
+        </p-select>
+      </div>
+      <div class="col-md-6 d-flex flex-column">
+        <label>Appointment Date</label>
+        <div class="w-100">
+          <p-datepicker 
+            [(ngModel)]="appointment.appointmentDate" 
+            name="appointmentDate" 
+            [showIcon]="true"
+            placeholder="Select appointment date" 
+            [minDate]="today" 
+            class="w-100" 
+            required>
+          </p-datepicker>
+        </div>
+      </div>
+    </div>
+
+    <!-- Is Follow-Up -->
+    <div class="form-group mb-3 d-flex align-items-center">
+      <p-checkbox 
+        [(ngModel)]="appointment.isFollowUp" 
+        name="isFollowUp" 
+        binary="true">
+      </p-checkbox>
+      <label class="mb-0 ml-2"><b>Is Follow-Up</b></label>
+    </div>
+
+    <!-- Reason -->
+    <div class="form-group mb-3">
+      <label>Reason for Visit</label>
+      <textarea 
+        pTextarea 
+        [(ngModel)]="appointment.reasonForVisit" 
+        name="reasonForVisit" 
+        placeholder="Reason for visit"
+        rows="3" 
+        class="form-control" 
+        required>
+      </textarea>
+    </div>
+  </div>
+
+  <abp-modal-footer 
+    [cancelDisabled]="saving" 
+    [saveDisabled]="isSaveDisabled()" 
+    (onCancelClick)="bsModalRef.hide()">
+  </abp-modal-footer>
 </form>
