complete module labtest and measureunit

--- a/10.2.0/angular/src/app/doctors/prescriptions/prescriptions.component.html
+++ b/10.2.0/angular/src/app/doctors/prescriptions/prescriptions.component.html
@@ -137,6 +137,9 @@
                                                 <li (click)="delete(selectedRecord)">
                                                     <i class="pi pi-trash"></i> Delete
                                                 </li>
+                                                <li (click)="viewPrescription(selectedRecord)">
+                                                    <i class="pi pi-eye"></i> View
+                                                </li>
                                             </ul>
                                         </p-overlayPanel>
                                     </td>
