--- a/10.2.0/angular/src/app/lab-technician/test-requests/test-requests.component.html
+++ b/10.2.0/angular/src/app/lab-technician/test-requests/test-requests.component.html
@@ -5,6 +5,11 @@
                 <div class="col-6">
                     <h1>Test Requests</h1>
                 </div>
+                <div class="col-6 text-right">
+                    <button type="button" class="btn bg-blue" (click)="createLabReport()">
+                        <i class="fas fa-plus"></i> Create Lab Report
+                    </button>
+                </div>
             </div>
         </div>
     </section>
