--- a/10.2.0/angular/src/app/doctors/create-prescriptions/create-prescriptions.component.html
+++ b/10.2.0/angular/src/app/doctors/create-prescriptions/create-prescriptions.component.html
@@ -1,7 +1,7 @@
 <form class="form-horizontal" autocomplete="off" #prescriptionForm="ngForm" (ngSubmit)="save()">
   <abp-modal-header title="Create New Prescription" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
 
-  <div class="modal-body">
+  <div class="modal-body scrollable-body">
 
     <!-- Patient Selection -->
     <div class="row">
@@ -24,12 +24,12 @@
           optionValue="id" placeholder="Select appointment" class="w-100">
           <!-- List item rendering -->
           <ng-template let-app pTemplate="item">
-            {{ app.startTime }} - {{ app.endTime }} - {{ app.patient?.fullName }}
+            {{ app.appointmentDate | date:'dd/MM/yyyy' }} - {{ app.patient?.fullName }}
           </ng-template>
 
           <!-- Selected item rendering -->
           <ng-template let-app pTemplate="selectedItem">
-            {{ app?.startTime }} - {{ app?.endTime }} - {{ app?.patient?.fullName }}
+            {{ app?.appointmentDate | date:'dd/MM/yyyy' }} - {{ app?.patient?.fullName }}
           </ng-template>
         </p-select>
 
@@ -93,12 +93,12 @@
         <div *ngFor="let item of prescription.items; let i = index" class="mt-2">
           <div class="d-flex align-items-center">
             <!-- Medicine Dropdown -->
-            <p-dropdown [(ngModel)]="item.medicineId" [options]="medicineOptions" optionLabel="label"
+            <p-dropdown appendTo="self" [(ngModel)]="item.medicineId" [options]="medicineOptions" optionLabel="label"
               optionValue="value" placeholder="Select Medicine" class="w-25 mr-2" name="itemMedicine{{i}}"
               (onChange)="onMedicineChange(item, i)">
             </p-dropdown>
             <!-- Dosage Dropdown -->
-            <p-dropdown *ngIf="item.medicineName && medicineDosageOptions[item.medicineName]" [(ngModel)]="item.dosage"
+            <p-dropdown appendTo="self" *ngIf="item.medicineName && medicineDosageOptions[item.medicineName]" [(ngModel)]="item.dosage"
               [options]="getDosageOptions(item.medicineName)" optionLabel="label" optionValue="value"
               placeholder="Dosage" class="w-25 mr-2" name="itemDosage{{i}}">
             </p-dropdown>
@@ -106,7 +106,7 @@
               [(ngModel)]="item.dosage" name="itemDosage{{i}}" class="w-25 mr-2" placeholder="Dosage" />
 
             <!-- Frequency Dropdown -->
-            <p-dropdown [(ngModel)]="item.frequency" [options]="frequencyOptions" optionLabel="label"
+            <p-dropdown appendTo="self" [(ngModel)]="item.frequency" [options]="frequencyOptions" optionLabel="label"
               optionValue="value" placeholder="Frequency" class="w-25 mr-2" name="itemFrequency{{i}}"></p-dropdown>
 
             <!-- Duration (Input + Dropdown) -->
@@ -114,7 +114,7 @@
               <input type="number" pInputText [(ngModel)]="item.durationValue" placeholder="Duration" class="w-50 mr-1"
                 min="1" required name="durationValue{{i}}">
 
-              <p-dropdown [(ngModel)]="item.durationUnit" [options]="durationUnits" optionLabel="label"
+              <p-dropdown appendTo="self" [(ngModel)]="item.durationUnit" [options]="durationUnits" optionLabel="label"
                 optionValue="value" class="w-50" name="itemDurationUnit{{i}}" required></p-dropdown>
             </div>
 
