create lab test for ipd and opd patient

--- a/10.2.0/angular/src/app/lab-technician/test-requests/test-requests.component.html
+++ b/10.2.0/angular/src/app/lab-technician/test-requests/test-requests.component.html
@@ -101,10 +101,10 @@
                                         Patient Name
                                         <p-sortIcon field="patientName"></p-sortIcon>
                                     </th>
-                                    <th style="min-width: 100px" pSortableColumn="patientName">
+                                    <!-- <th style="min-width: 100px" pSortableColumn="patientName">
                                         Doctor Name
                                         <p-sortIcon field="patientName"></p-sortIcon>
-                                    </th>
+                                    </th> -->
                                     <th style="min-width: 150px" pSortableColumn="testname">
                                         Test Name
                                         <p-sortIcon field="testname"></p-sortIcon>
@@ -126,11 +126,11 @@
                                             {{ record.patientName }}
                                         </span>
                                     </td>
-                                    <td>
+                                    <!-- <td>
                                         <span>
                                             Dr. {{ record.doctorName }}
                                         </span>
-                                    </td>
+                                    </td> -->
                                     <td>
                                         <span>
                                             {{ record.labReportTypeName }}
