--- a/10.2.0/angular/src/app/master-table/createupdate-lab-test/createupdate-lab-test.component.html
+++ b/10.2.0/angular/src/app/master-table/createupdate-lab-test/createupdate-lab-test.component.html
@@ -18,7 +18,7 @@
         <div class="form-group">
             <label for="unitId"><b>Unit *</b></label>
             <p-dropdown id="unitId" name="unitId" [options]="measureUnits" [(ngModel)]="selectedUnitId"
-                optionLabel="name" optionValue="id" placeholder="Select unit" class="w-100" required></p-dropdown>
+                optionLabel="name" optionValue="id" placeholder="Select unit" class="w-100"></p-dropdown>
 
         </div>
 
